Fixing the error where the menu was not shown on mobile when the logo and the company name was set to invisible.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1936,6 +1936,8 @@ select, input[type=search] {
     .widget.extendednavigation {
         width: 100%;
         float: right;
+		min-height: 40px;
+		top: 10px;
     }
 
     .widget.extendednavigation .bk-overlay {
@@ -1949,6 +1951,7 @@ select, input[type=search] {
 
 	.widget .extendednavigation a.pull {
 		display: block;
+		top: 0;
 	}
 
 	.widget .extendednavigation a.pull:after {
